--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.9",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   }
 }
